--- a/less/home-page.less
+++ b/less/home-page.less
@@ -133,6 +133,7 @@
 
   img{
    .imageWidth();
+   margin-top: 25%;
   }
 
 
