--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,8 +4,10 @@
 nav{
     text-align: center;
     padding: 1rem 0;
+    width: 100%;
     background-color: @porcelain;
-
+    position: fixed;
+    left: 0;
 
     h1{
         font-size: @desktopH1FontSize;
