--- a/less/variables.less
+++ b/less/variables.less
@@ -18,7 +18,7 @@
 @sea-shell: #F1F1F1;
 @ebony-clay: #23293B;
 @shuttle-gray: #5E6164;
-@porcelain: #F6F7F8;
+@porcelain: rgba(246,247,248,0.5);
 @waterloo: #81848E;
 @btn-bg-color: #22283A;
 @border-real: #dee2e6;
